# lob_feature_engineering

./: .gitignore  LOB_ML_Notebook.ipynb  README.md  lob_ml_pipeline.py  pyproject.toml
SYSTEMATIC_MACRO/: README.md  systematic_macro_feature_engineering.py
