[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lob_feature_engineering"
version = "2.0.0"
description = "LOB Feature Engineering"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.13"
authors = [{ name = "Shaikat Majumdar", email = "sm2774us@gmail.com" }]
keywords = ["systematic", "macro", "alpha", "iscf", "mgd", "causal", "quant"]
classifiers = [
  "Programming Language :: Python :: 3.13",
  "Topic :: Office/Business :: Financial :: Investment",
  "Private :: Do Not Upload",
]

dependencies = [
  "numpy>=2.1",
  "pandas>=2.2",
  "scipy>=1.14",
  "scikit-learn>=1.5",
  "click>=8.1",
  "matplotlib>=3.9",
  "seaborn>=0.13.2",
  "kaleido>=1.3.0",
  "plotly>=6.8.0",
  "yfinance>=0.2.40",
  "pandas-datareader>=0.10",
  "statsmodels>=0.14",
  "nbformat>=5.10",
  "lightgbm>=4.6.0",
  "torch>=2.12.0",
  "torchaudio>=2.11.0",
  "torchvision>=0.27.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-cov>=5.0",
  "pytest-xdist>=3.6",
  "ruff>=0.6",
  "mypy>=1.11",
  "jupyter>=1.1",
  "jupyterlab>=4.2",  
  "nbconvert>=7.16",
  "ipywidgets>=8.1",
]
latex = [
  "pylatex>=1.4",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

#[tool.hatch.build.targets.editable]
#dev-mode-dirs = ["src/python"]

#[tool.pytest.ini_options]
#testpaths = ["tests/python"]
#python_files = ["test_*.py"]
#python_classes = ["Test*"]
#python_functions = ["test_*"]
#addopts = ["--tb=short"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.13"
strict = true
